--- a/cart.html
+++ b/cart.html
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="btn-set">
-                    <button class="btn" onclick="checkOut()">Checkout</button>
+                    <button class="btn" id = "checkedOut" onclick="checkOut()">Checkout</button>
                 </div>
             </div>
 
