--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
                  
                 <div class="info">
                     <p class="price">$699</p>
-                </div> 
-                <span>Memory Size:<span id="sizeSelected"></span></span>
-                <span>Quantity:<span id="qtySelected"></span></span>
-               
+                </div class> 
+                <span >Memory Size:<span id="sizeSelected"></span></span>
+                <span >Quantity:<span id="qtySelected"></span></span>
             </div>
         </div>
 
